--- a/test/Churchee.Module.Identity.Tests/Churchee.Module.Identity.Tests.csproj
+++ b/test/Churchee.Module.Identity.Tests/Churchee.Module.Identity.Tests.csproj
@@ -9,6 +9,14 @@
     <IsTestProject>true</IsTestProject>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <NoWarn>1701;1702;CA1873</NoWarn>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <NoWarn>1701;1702;CA1873</NoWarn>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="bunit" Version="2.0.66" />
     <PackageReference Include="coverlet.collector" Version="6.0.4">
