--- a/src/Churchee.Presentation.Admin/appsettings.json
+++ b/src/Churchee.Presentation.Admin/appsettings.json
@@ -22,5 +22,8 @@
   },
   "Facebook": {
     "Api": "https://graph.facebook.com/v18.0/"
+  },
+  "Otp": {
+    "AuthenticatorUriFormat": "otpauth://totp/{0}:{1}?secret={2}&issuer={0}&digits=6"
   }
 }
