--- a/test/Churchee.Module.Identity.Tests/Churchee.Module.Identity.Tests.csproj
+++ b/test/Churchee.Module.Identity.Tests/Churchee.Module.Identity.Tests.csproj
@@ -36,6 +36,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Churchee.Module.Identity\Churchee.Module.Identity.csproj" />
+    <ProjectReference Include="..\Churchee.Test.Helpers.Blazor\Churchee.Test.Helpers.Blazor.csproj" />
     <ProjectReference Include="..\Churchee.Test.Helpers\Churchee.Test.Helpers.csproj" />
   </ItemGroup>
 
