Work on Integrations and Logging to Telegram

--- a/src/Churchee.Module.Logging/Churchee.Module.Logging.csproj
+++ b/src/Churchee.Module.Logging/Churchee.Module.Logging.csproj
@@ -16,6 +16,7 @@
 	<ItemGroup>
 	  <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
 	  <PackageReference Include="Serilog.Sinks.MSSqlServer" Version="9.0.2" />
+	  <PackageReference Include="Serilog.Sinks.Telegram.Alternative" Version="1.5.0" />
 	</ItemGroup>
 
 	<ItemGroup>
