--- a/src/Churchee.Module.Hangfire/Churchee.Module.Hangfire.csproj
+++ b/src/Churchee.Module.Hangfire/Churchee.Module.Hangfire.csproj
@@ -4,6 +4,18 @@
 		<TargetFramework>net10.0</TargetFramework>
 		<AddRazorSupportForMvc>true</AddRazorSupportForMvc>
 	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+	  <NoWarn>1701;1702;CA1873</NoWarn>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+	  <NoWarn>1701;1702;CA1873</NoWarn>
+	</PropertyGroup>
+
+	<ItemGroup>
+	  <Compile Remove="Filters\JobExceptionLoggingFilter.cs" />
+	</ItemGroup>
 	<ItemGroup>
 		<InternalsVisibleTo Include="Churchee.Module.Hangfire.Tests" />
 	</ItemGroup>
