--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -39,7 +39,7 @@ jobs:
           /k:"$SONAR_PROJECT_KEY" \
           /o:"$SONAR_ORGANIZATION" \
           /d:sonar.token="$SONAR_TOKEN" \
-          /d:sonar.cs.cobertura.reportsPaths=**/coverage.cobertura.xml
+          /d:sonar.cs.opencover.reportsPaths=**/coverage.opencover.xml
 
     - name: Download and extract Bootstrap efore main build
       run: dotnet msbuild src/Churchee.Infrastructure.SassCompilation/Churchee.Infrastructure.SassCompilation.csproj -t:DownloadAndExtractBootstrap
