Facbook Event Tests

--- a/test/Churchee.Module.Facebook.Events.Tests/Churchee.Module.Facebook.Events.Tests.csproj
+++ b/test/Churchee.Module.Facebook.Events.Tests/Churchee.Module.Facebook.Events.Tests.csproj
@@ -33,6 +33,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Churchee.Module.Facebook.Events\Churchee.Module.Facebook.Events.csproj" />
+    <ProjectReference Include="..\Churchee.Test.Helpers.Blazor\Churchee.Test.Helpers.Blazor.csproj" />
     <ProjectReference Include="..\Churchee.Test.Helpers\Churchee.Test.Helpers.csproj" />
   </ItemGroup>
 
