--- a/test/Churchee.Module.X.Tests/Churchee.Module.X.Tests.csproj
+++ b/test/Churchee.Module.X.Tests/Churchee.Module.X.Tests.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Churchee.Module.X\Churchee.Module.X.csproj" />
+    <ProjectReference Include="..\Churchee.Test.Helpers.Blazor\Churchee.Test.Helpers.Blazor.csproj" />
     <ProjectReference Include="..\Churchee.Test.Helpers\Churchee.Test.Helpers.csproj" />
   </ItemGroup>
 
