--- a/test/Churchee.Module.YouTube.Tests/Churchee.Module.YouTube.Tests.csproj
+++ b/test/Churchee.Module.YouTube.Tests/Churchee.Module.YouTube.Tests.csproj
@@ -24,6 +24,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\Churchee.Module.UI\Churchee.Module.UI.csproj" />
     <ProjectReference Include="..\..\src\Churchee.Module.YouTube\Churchee.Module.YouTube.csproj" />
+    <ProjectReference Include="..\Churchee.Test.Helpers.Blazor\Churchee.Test.Helpers.Blazor.csproj" />
     <ProjectReference Include="..\Churchee.Test.Helpers\Churchee.Test.Helpers.csproj" Condition="Exists('..\Churchee.Test.Helpers\Churchee.Test.Helpers.csproj')" />
   </ItemGroup>
 
