--- a/test/Churchee.Module.UI.Tests/Churchee.Module.UI.Tests.csproj
+++ b/test/Churchee.Module.UI.Tests/Churchee.Module.UI.Tests.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Churchee.Test.Helpers.Blazor\Churchee.Test.Helpers.Blazor.csproj" />
+    <ProjectReference Include="..\Churchee.Test.Helpers\Churchee.Test.Helpers.csproj" />
   </ItemGroup>
 
   <ItemGroup>
