--- a/src/Churchee.Data.EntityFramework.Shared/Churchee.Data.EntityFramework.Shared.csproj
+++ b/src/Churchee.Data.EntityFramework.Shared/Churchee.Data.EntityFramework.Shared.csproj
@@ -15,4 +15,9 @@
 		<PackageReference Include="Scrutor" Version="6.1.0" />
     </ItemGroup>
 	
+	
+   <ItemGroup>
+     <ProjectReference Include="..\Churchee.Common\Churchee.Common.csproj" />
+   </ItemGroup>
+	
 </Project>
