--- a/src/Churchee.Data.EntityFramework.Shared/Churchee.Data.EntityFramework.Shared.csproj
+++ b/src/Churchee.Data.EntityFramework.Shared/Churchee.Data.EntityFramework.Shared.csproj
@@ -5,9 +5,12 @@
 	  <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+	<ItemGroup>
+		<InternalsVisibleTo Include="$(MSBuildProjectName).Tests" />
+	</ItemGroup>
 	
-	
-   <ItemGroup>
+	<ItemGroup>
 		<PackageReference Include="Ardalis.Specification.EntityFrameworkCore" Version="9.3.1" />
 		<PackageReference Include="Microsoft.AspNetCore.DataProtection.EntityFrameworkCore" Version="10.0.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="10.0.0" />
